# PYUI

./: .gitignore  LICENSE  README.md  README_pypi.md  __init__.py  pyproject.toml  setup.py
PYUI/: PYUICommonExecutable.spec  buildscript.py  buildtools.py  compiler.py  converter.py  create.py  manage.py  requirements.txt  settings.py  tailwindBuilder.py
PYUI/JS/: connection.js  handler.js
PYUI/Package/: PYUI.py  bootstrap.py  pyuinode.py
PYUI/boilerplate/: index.css  index.py  index.xml
XMLParser/: raw.c  xmlparser.c
