[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PYUI"
version = "1.0.0"
authors = [
  { name="Akalabaya Pal", email="akalabaya.2008@proton.me" },
]
description = "A short description of my package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Dependent",
]
dependencies = [
   
]

[tool.setuptools.package-data]
# Includes all .dll files in any package
"*" = ["PYUI/*.dll","PYUI/*.js","PYUI/*.spec","PYUI/*.xml","PYUI/*.css"]

[tool.setuptools.packages.find]
where = ["./"]
