[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "pyui-desktop"
version = "0.5.0.6"
authors = [
  { name="Akalabaya Pal", email="akalabaya.2008@proton.me" },
]
description = "PYUI:Python Threadsafe UI framework, with compiled xml layouts and python.With dynamic component reusebility and management.Supports css and JS. Comes with Tailwind compatibility."
readme = "README_pypi.md"
dependencies = [
  "pywebview==6.2.1",
  "watchdog==6.0.0",
  "websockets==16.0",
  "colorama",
  "pyinstaller"
]

[tool.setuptools]
# Set to false so it uses the package-data paths below instead of relying on Git/MANIFEST.in
include-package-data = false 

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
# Using "*" ensures all packages (regardless of upper/lowercase names) include their contents
"*" = ["**/*"]